fix: add z-index to mobile navbar modal (z-40/50) and improve mobile navbar JS with astro:page-load to fix the issue that menu open only one time

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,15 @@
 
   --font-Inter: Inter;
 }
+
+main {
+  position: relative;
+  z-index: 10;
+}
+
+h1,
+h2,
+h3 {
+  position: relative;
+  z-index: 20;
+}
